images/envoy/tests/static.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  static.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: edge
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: direct_response_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/test-envoy-static"
                    direct_response:
                      status: 200
                      body:
                        inline_string: |
                          Yes it's working
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: IMAGE_NAME
        args:
          - "--config-path"
          - "/etc/envoy-config/static.yaml"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /test-envoy-static
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy-config
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
